create: file structure of style

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,2 +1,6 @@
-  //Подключение базовых настроек
-  @import 'settings'
+// Подключение переменных
+@import 'variables'
+// Подключение настроек
+@import 'settings'
+// Стили для блока header
+@import 'blocks/header'
