--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -2,3 +2,7 @@
   box-sizing: border-box 
 body 
   font-family: 'Mulish', sans-serif
+.container
+  max-width: 1110px
+  margin: auto
+  border: 1px solid red
