create: styles for header

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -2,7 +2,8 @@
   box-sizing: border-box 
 body 
   font-family: 'Mulish', sans-serif
+  color: $text-color
 .container
   max-width: 1110px
   margin: auto
-  border: 1px solid red
+
