--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,5 +2,7 @@
 @import 'variables'
 // Подключение настроек
 @import 'settings'
+// Подключение normalize
+@import 'normalize'
 // Стили для блока header
 @import 'blocks/header'
