--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -4,23 +4,52 @@
 @media (max-width: 992px)
   .container
     max-width: 700px
+  .logo
+    width: 132px
   .navbar
     &-top
       padding-top: 30px
       padding-bottom: 30px      
     &__search
       margin-left: auto // Расстояние будет одинаковое
-      max-width: 340px
+     
     &-menu
       padding-top: 22px
       padding-bottom: 22px
       &__link
         font-size: 12px
         line-height: 15px
+    .search
+      &_input
+         width: 340px
 @media (max-width: 768px)
   .container
     max-width: 576px
     width: 92%
+  .navbar
+    &__search, &-menu, &__user
+      display: none  
+  .menu
+    &-button
+      display: flex
+      width: 16px
+      height: 11px
+      padding: 0
+      align-items: center
+      justify-content: space-between
+      flex-direction: column
+      border: none
+      background-color: #fff
+      cursor: pointer // при наведении будет курсор
+      &__line
+        width: 16px
+        height: 1px
+        background-color: $text-color
+@media (max-width: 576px)
+  .logo
+    width: 99px
+
+
   
 
 
