--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -6,4 +6,6 @@ body
 .container
   max-width: 1110px
   margin: auto
+img 
+  max-width: 100% //Картинка никогда не вываливалась за пределы родителя
 
