fix: padding to bottom

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -11,12 +11,11 @@
       padding-top: 30px
       padding-bottom: 30px      
     &__search
-      margin-left: auto // Расстояние будет одинаковое
-     
+      margin-left: 47px
+      margin-right: 74px
     &-menu
-      padding-top: 22px
-      padding-bottom: 22px
-      &__link
+      padding: 22 15 22 15
+        &__link
         font-size: 12px
         line-height: 15px
     .search
@@ -25,7 +24,7 @@
 @media (max-width: 768px)
   .container
     max-width: 576px
-    width: 92%
+    width: 90%
   .navbar
     &__search, &-menu, &__user
       display: none  
