--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -25,6 +25,7 @@
       color: inherit //Берет цвет родителя
       text-decoration: none //Убираем подчеркивание
       text-transform: uppercase // Заглавные буквы
+      font-weight: bold
       font-size: 14px
       line-height: 18px
 .logo
