--- a/css/style.css
+++ b/css/style.css
@@ -466,6 +466,7 @@ th {
   color: inherit;
   text-decoration: none;
   text-transform: uppercase;
+  font-weight: bold;
   font-size: 14px;
   line-height: 18px;
 }
@@ -550,10 +551,13 @@ th {
     padding-bottom: 30px;
   }
   .navbar__search {
-    margin-left: auto;
+    margin-left: 47px;
+    margin-right: 74px;
   }
   .navbar-menu {
     padding-top: 22px;
+    padding-left: 15px;
+    padding-right: 15px;
     padding-bottom: 22px;
   }
   .navbar-menu__link {
@@ -568,7 +572,7 @@ th {
 @media (max-width: 768px) {
   .container {
     max-width: 576px;
-    width: 92%;
+    width: 90%;
   }
   .navbar__search, .navbar-menu, .navbar__user {
     display: none;
