--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,5 +6,7 @@
 @import 'normalize'
 // Стили для блока header
 @import 'blocks/header'
+// Стили для блока breadcrumb
+@import 'blocks/breadcrumb'
 // Подключение стилей для адаптива
 @import 'media'
