--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -15,9 +15,9 @@
       margin-right: 74px
     &-menu
       padding: 22 15 22 15
-        &__link
-        font-size: 12px
-        line-height: 15px
+    &-menu__link
+      font-size: 12px
+      line-height: 15px
     .search
       &_input
          width: 340px
