--- a/sass/blocks/_breadcrumb.sass
+++ b/sass/blocks/_breadcrumb.sass
@@ -2,4 +2,11 @@
   &-list
    display: flex
    align-items: center
+   padding: 18px 0
+   margin: 0
    list-style: none
+   &__item // Для всех элементов breadcrumb-list__item
+     &:not(:last-child) // но не для последнего
+      &::after // нужно применить
+        content: '/' // со знаком слэш
+        margin-right: 4px // и правым отступом 4 пикселя
