--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,5 +8,7 @@
 @import 'blocks/header'
 // Стили для блока breadcrumb
 @import 'blocks/breadcrumb'
+// Стили блока Отель
+@import 'blocks/hotel'
 // Подключение стилей для адаптива
 @import 'media'
