--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -45,5 +45,11 @@
   &__counter
     font-size: 14px
     line-height: 18px
+  .swiper-container {
+  width: 600px;
+  height: 300px;
+}
+    
+
 
 
