--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -56,7 +56,7 @@
     line-height: 18px
 .swiper-container
   width: 100%
-  height: 450px
+  height: 100%
   position: relative
   border-radius: 8px
   &::after
@@ -72,6 +72,7 @@
     z-index: 10
 .slider
   width: 728px
+  height: 450px
   &-button
     position: absolute
     top: 50%
@@ -170,7 +171,8 @@
   width: 347px
   height: 213px
   background-color: #000
-  border-radius: 4px
+  border-radius: 10px
+  overflow: hidden
 
 
 
